@@ -21,6 +21,7 @@ val parse_names : string list ref ->  Arg.key * Arg.spec * Arg.doc
 val parse_rename : string list ref ->  Arg.key * Arg.spec * Arg.doc
 val parse_excl : string list ref ->  Arg.key * Arg.spec * Arg.doc
 val parse_hexa : bool ref ->  Arg.key * Arg.spec * Arg.doc
+val parse_int32 : bool ref ->  Arg.key * Arg.spec * Arg.doc
 
 module Make :
   functor
