@@ -25,6 +25,7 @@ let rename = ref []
 let names = ref []
 let excl = ref []
 let hexa = ref false
+let int32 = ref true
 let options =
   let open CheckName in
   [
@@ -33,7 +34,7 @@ let options =
    "<non-default> be silent");  
   ("-v", Arg.Unit (fun _ -> incr verbose),
    "<non-default> show various diagnostics, repeat to increase verbosity");
-   parse_hexa hexa;
+   parse_hexa hexa; parse_int32 int32;
    parse_rename rename;
    parse_select select; parse_names names;
    parse_excl excl;
@@ -67,6 +68,7 @@ let names = !names
 let rename = !rename
 let verbose = !verbose
 let hexa = !hexa
+let int32 = !int32
 
 let log1,log2 = match !logs with
 | [log1;log2;] -> log1,log2
@@ -90,6 +92,7 @@ module LL =
             let excl = excl
           end)
       let hexa = hexa
+      let int32 = int32
     end)
 
 let readlog log = match log with
