@@ -27,6 +27,7 @@ let rename = ref []
 let conds = ref []
 let inverse = ref false
 let hexa = ref false
+let int32 = ref true
 
 let options =
   let open CheckName in
@@ -37,7 +38,7 @@ let options =
    "<non-default> show various diagnostics, repeat to increase verbosity");
   ("-inverse", Arg.Bool (fun b -> inverse := b),
    Printf.sprintf "<bool> inverse selection, default %b" !inverse) ;
-  parse_hexa hexa;
+  parse_hexa hexa; parse_int32 int32;
   parse_select select ; parse_names names; parse_excl excl; parse_rename rename ;
   ("-conds",
     Arg.String (fun s -> conds := !conds @ [s]),
@@ -62,6 +63,7 @@ let rename = !rename
 let verbose = !verbose
 let conds = !conds
 let hexa = !hexa
+let int32 = !int32
 let log = match !logs with
 | [log;] -> Some log
 | [] -> None
@@ -91,6 +93,7 @@ module LL =
            let excl = excl
          end)
       let hexa = hexa
+      let int32 = int32
     end)
 
 module D =
