@@ -26,6 +26,7 @@ let rename = ref []
 let excl = ref []
 let npar = ref 1
 let hexa = ref false
+let int32 = ref true
 
 let options =
   let open CheckName in
@@ -36,7 +37,7 @@ let options =
    "<non-default> show various diagnostics, repeat to increase verbosity");
   ("-j", Arg.Int (fun i -> npar := i),
    (sprintf "<int> parallel sum using <n> processeses, default %i" !npar)) ;
-   parse_hexa hexa;
+   parse_hexa hexa; parse_int32 int32;
    parse_rename rename;
    parse_select select; parse_names names; parse_excl excl;
  ]
@@ -60,6 +61,7 @@ let names = !names
 let excl = !excl
 let verbose = !verbose
 let hexa = !hexa
+let int32 = !int32
 
 module Verbose = struct let verbose = verbose end
 
@@ -112,6 +114,7 @@ module LL =
       let verbose = verbose
       include Check
       let hexa = hexa
+      let int32 = int32
     end)
 
 module D =
